--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -20,14 +19,55 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding.enabled = true
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
+}
+
+ext {
+    lastadapterVersion = '2.3.0'
+    retrofitLibraryVersion = '2.3.0'
+    httpLoggingInterceptorVersion = '3.9.1'
+    supportLibraryVersion = '28.0.0'
+    roomVersion = '1.0.0'
+    supportDesignVersion = '27.1.1'
+    archVersion = '1.1.1'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
+    implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation "com.android.support:design:${supportDesignVersion}"
+    implementation "com.android.support:cardview-v7:${supportDesignVersion}"
+    implementation "com.android.support:design:${supportDesignVersion}"
+    kapt "androidx.databinding:databinding-compiler:3.2.0"
+
+    //last adapter for set adapter in recycler view
+    implementation "com.github.nitrico.lastadapter:lastadapter:${lastadapterVersion}"
+
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:${retrofitLibraryVersion}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofitLibraryVersion}"
+
+    //http logging interceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:${httpLoggingInterceptorVersion}"
+
+    // Room
+    implementation "android.arch.persistence.room:runtime:${roomVersion}"
+    annotationProcessor "android.arch.persistence.room:compiler:${roomVersion}"
+
+    implementation "android.arch.lifecycle:livedata:${archVersion}"
+    annotationProcessor "android.arch.lifecycle:compiler:${archVersion}"
+
+    // Kotlin room compiler
+    kapt "android.arch.persistence.room:compiler:${roomVersion}"
+
+    implementation 'com.an.customfontview:customfont:0.1.0'
+
+
 }
