--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ ext {
     roomVersion = '1.0.0'
     supportDesignVersion = '27.1.1'
     archVersion = '1.1.1'
+    k4kotlinVersion = '0.5.3'
+    glide_version = '4.6.1'
+    dagger_version = '2.11'
+
 }
 
 dependencies {
@@ -64,8 +68,22 @@ dependencies {
     implementation "android.arch.lifecycle:livedata:${archVersion}"
     annotationProcessor "android.arch.lifecycle:compiler:${archVersion}"
 
+    implementation "android.arch.lifecycle:extensions:${archVersion}"
+    implementation "android.arch.lifecycle:viewmodel:${archVersion}"
+
     // Kotlin room compiler
     kapt "android.arch.persistence.room:compiler:${roomVersion}"
+
+    // Core extension functions
+    implementation "com.github.kirtan403.k4kotlin:k4kotlin-retrofit:${k4kotlinVersion}"
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:${glide_version}"
+    kapt "com.github.bumptech.glide:compiler:${glide_version}"
+
+    //dagger
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
 
     implementation 'com.an.customfontview:customfont:0.1.0'
 
