--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
 
     // Room
     implementation "android.arch.persistence.room:runtime:${roomVersion}"
-    annotationProcessor "android.arch.persistence.room:compiler:${roomVersion}"
+//    annotationProcessor "android.arch.persistence.room:compiler:${roomVersion}"
 
     implementation "android.arch.lifecycle:livedata:${archVersion}"
     annotationProcessor "android.arch.lifecycle:compiler:${archVersion}"
